syntax = "proto3";
package emilgeorgiev.lottery.lottery;

option go_package = "github.com/EmilGeorgiev/lottery/x/lottery/types";

message Lottery {
  repeated EnterLotteryTx enter_lottery_txs = 1;
}

message EnterLotteryTx {
  string user_address = 1;
  uint64 bet = 2;
  string denom = 3;
  string datetime = 4;
}